export const snapshot = {};

snapshot[`TransportSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  enum: [
    "websocket",
    "twilio",
  ],
  type: "string",
}
`;

snapshot[`AgentConfigSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    builtinTools: {
      items: {
        enum: [
          "web_search",
          "visit_webpage",
          "fetch_json",
          "run_code",
          "user_input",
          "final_answer",
        ],
        type: "string",
      },
      type: "array",
    },
    greeting: {
      type: "string",
    },
    instructions: {
      type: "string",
    },
    maxSteps: {
      exclusiveMinimum: 0,
      maximum: 9007199254740991,
      type: "integer",
    },
    mode: {
      enum: [
        "full",
        "stt-only",
      ],
      type: "string",
    },
    name: {
      minLength: 1,
      type: "string",
    },
    sttPrompt: {
      minLength: 1,
      type: "string",
    },
    toolChoice: {
      anyOf: [
        {
          enum: [
            "auto",
            "required",
            "none",
          ],
          type: "string",
        },
        {
          additionalProperties: false,
          properties: {
            toolName: {
              minLength: 1,
              type: "string",
            },
            type: {
              const: "tool",
              type: "string",
            },
          },
          required: [
            "type",
            "toolName",
          ],
          type: "object",
        },
      ],
    },
    transport: {
      items: {
        enum: [
          "websocket",
          "twilio",
        ],
        type: "string",
      },
      minItems: 1,
      type: "array",
    },
    voice: {
      type: "string",
    },
  },
  required: [
    "name",
    "instructions",
    "greeting",
    "voice",
  ],
  type: "object",
}
`;

snapshot[`ToolSchemaSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    description: {
      minLength: 1,
      type: "string",
    },
    name: {
      minLength: 1,
      type: "string",
    },
    parameters: {
      additionalProperties: {},
      properties: {
        properties: {
          additionalProperties: {},
          propertyNames: {
            type: "string",
          },
          type: "object",
        },
        required: {
          items: {
            type: "string",
          },
          type: "array",
        },
        type: {
          const: "object",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
  },
  required: [
    "name",
    "description",
    "parameters",
  ],
  type: "object",
}
`;

snapshot[`DeployBodySchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    env: {
      additionalProperties: {
        type: "string",
      },
      propertyNames: {
        type: "string",
      },
      type: "object",
    },
    html: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
    transport: {
      items: {
        enum: [
          "websocket",
          "twilio",
        ],
        type: "string",
      },
      minItems: 1,
      type: "array",
    },
    worker: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
  },
  required: [
    "worker",
    "html",
  ],
  type: "object",
}
`;

snapshot[`EnvSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: {
    type: "string",
  },
  properties: {
    ASSEMBLYAI_API_KEY: {
      minLength: 1,
      type: "string",
    },
    LLM_MODEL: {
      type: "string",
    },
  },
  required: [
    "ASSEMBLYAI_API_KEY",
  ],
  type: "object",
}
`;

snapshot[`ServerMessageSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  oneOf: [
    {
      additionalProperties: false,
      properties: {
        audio_format: {
          const: "pcm16",
          type: "string",
        },
        mode: {
          enum: [
            "full",
            "stt-only",
          ],
          type: "string",
        },
        protocol_version: {
          exclusiveMinimum: 0,
          maximum: 9007199254740991,
          type: "integer",
        },
        sample_rate: {
          exclusiveMinimum: 0,
          maximum: 9007199254740991,
          type: "integer",
        },
        tts_sample_rate: {
          exclusiveMinimum: 0,
          maximum: 9007199254740991,
          type: "integer",
        },
        type: {
          const: "ready",
          type: "string",
        },
      },
      required: [
        "type",
        "protocol_version",
        "audio_format",
        "sample_rate",
        "tts_sample_rate",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        type: {
          const: "partial_transcript",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        turn_order: {
          maximum: 9007199254740991,
          minimum: 0,
          type: "integer",
        },
        type: {
          const: "final_transcript",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        turn_order: {
          maximum: 9007199254740991,
          minimum: 0,
          type: "integer",
        },
        type: {
          const: "turn",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        text: {
          type: "string",
        },
        type: {
          const: "chat",
          type: "string",
        },
      },
      required: [
        "type",
        "text",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "tts_done",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "cancelled",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "reset",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        details: {
          items: {
            type: "string",
          },
          type: "array",
        },
        message: {
          type: "string",
        },
        type: {
          const: "error",
          type: "string",
        },
      },
      required: [
        "type",
        "message",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "pong",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
  ],
}
`;

snapshot[`ClientMessageSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  oneOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "audio_ready",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "cancel",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "reset",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: "ping",
          type: "string",
        },
      },
      required: [
        "type",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        messages: {
          items: {
            additionalProperties: false,
            properties: {
              role: {
                enum: [
                  "user",
                  "assistant",
                ],
                type: "string",
              },
              text: {
                minLength: 1,
                type: "string",
              },
            },
            required: [
              "role",
              "text",
            ],
            type: "object",
          },
          minItems: 1,
          type: "array",
        },
        type: {
          const: "history",
          type: "string",
        },
      },
      required: [
        "type",
        "messages",
      ],
      type: "object",
    },
  ],
}
`;
